# tacs

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .hgignore  .travis.yml  Example-CRM_Optimization.html  Example-Pressure_Plate_Tutorial.html  LICENSE.txt  Makefile  Makefile.in.info  README.md  TACS_Common.mk  __init__.py  genindex.html  index.html  install.html  interface.html  interfaces.html  objects.inv  postprocessing.html  py-modindex.html  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  setup.cfg.info  setup.py  troubleshooting.html
.github/: dependabot.yaml
_modules/: index.html  tacs.html
_sources/: Example-Pressure_Plate_Tutorial.rst.txt  index.rst.txt  install.rst.txt  interfaces.rst.txt  reference.rst.txt
_static/: documentation_options.js
caps2tacs/: caps2tacs.html  main.html
conda/: build.sh  conda_build_config.yaml  meta.yaml
core/: TACS.html  constitutive.html  core.html  elements.html  functions.html
docs/: Makefile  README
examples/: Example-Beam_Optimization.html  Example-Beam_Shape_Optimization.html  Example-CRM_Optimization.html  Example-Composite_Optimization.html  Example-Plate.html  Example-Transient_Battery.html  Makefile
install/: Makefile  install.tex
lib/: README
mach/: mach.html
mphys/: builder.html  mphys.html
pytacs/: adjacency.html  base_solver.html  buckling.html  constraints.html  continuation_solver.html  dvcon.html  modal.html  newton_solver.html  panel_length.html  panel_width.html  problems.html  pytacs.html  pytacs_module.html  solvers.html  static.html  stiffener_length.html  transient.html  volume.html
python/: CyKSMPrint.c  CyKSMPrint.h  CyTACSKsm.c  CyTACSKsm.h  CyTACSMat.c  CyTACSMat.h  CyTACSPc.c  CyTACSPc.h  CyTACSVec.c  CyTACSVec.h  Makefile  TACS.pxd  TACS.pyx  TACSConstitutiveWrapper.h  TACSElementTemplates.h  TACSTypedefs.pxd-complex  TACSTypedefs.pxd-real  __init__.py  constitutive.pxd  constitutive.pyx  elements.pxd  elements.pyx  functions.pxd  functions.pyx  solver.pxd  solver.pyx
(+2076 files in other folders)
